[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openline-agent-watchdog"
version = "0.2.0"
description = "Lightweight drift/loop watchdog utilities for agent runs (OpenLine ecosystem)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Terrynce White"}
]
dependencies = ["numpy>=1.21"]


[tool.setuptools]
packages = ["agent_watchdog"]